--- a/MatRoleClaim/Views/Shared/_Layout.cshtml
+++ b/MatRoleClaim/Views/Shared/_Layout.cshtml
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Training Mannager System</title>
     @Styles.Render("~/Content/css")
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        @Html.ActionLink("Training Mannager System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,7 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="@Url.Action("Index", "UserRoles")">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("ManageAccount", "UserRoles")">Manager Account</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Blog", "Home")">Blog</a>
@@ -32,24 +35,22 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin</a>
                 </li>
-
                 @Html.Partial("_LoginPartial")
-
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            @*<form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                </form>*@
         </div>
     </nav>
 
 
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+            <p>&copy; @DateTime.Now.Year - Training Mannager System</p>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
