--- a/MatRoleClaim/Views/UserRoles/Details.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Details.cshtml
@@ -3,21 +3,9 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>UserRoles</h4>
-    <hr />
+<div class="m-5">
+    <h2>Details User </h2>
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
@@ -35,10 +23,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Roles)
+            Account level
         </dt>
 
-        <dd class="col-3">
+        <dd class="col-3 mt-1">
             <ul class="list-group">
                 @foreach (var role in Model.Roles)
                 {
@@ -54,6 +42,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.UserId }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.UserId }) -
     @Html.ActionLink("Back to List", "Index")
 </p>
