--- a/MatRoleClaim/Views/UserRoles/Index.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Index.cshtml
@@ -1,61 +1,83 @@
 ﻿@model IEnumerable<MatRoleClaim.Models.ViewModels.UserRolesViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home Page Admin";
 }
+<div class="m-5">
+    <h2>Manage Training Staff Accounts</h2>
+    <table class="table">
+        <tbody>
+            @foreach (var user in Model)
+            {
+                var check = user.Roles.Where(x => x.Name == "Administrator").ToList();
+                if (check.Count > 0)
+                {
+                    <tr class="col-12">
+                        <td class="col-2">
+                            @Html.DisplayFor(modelItem => user.UserEmail)
+                        </td>
+                        <td class="col-2">
+                            @Html.DisplayFor(modelItem => user.UserName)
+                        </td>
+                        <td class="col-2">
+                            **********
+                        </td>
+                        <td class="col-3">
+                            <ul style="font-size:12px" class="list-group">
+                                @foreach (var role in user.Roles)
+                                {
+                                    <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
+                                        @string.Format("{0}", role.Name)
+                                    </li>
+                                }
+                            </ul>
+                        </td>
+                        <td class="col-1">
+                            @Html.ActionLink("Edit", "Edit", new { id = user.UserId }) -
+                            @Html.ActionLink("Show", "Details", new { id = user.UserId })
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
 
-<h2>UserRoles Index</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.UserId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserEmail)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Roles)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
-            <tr>
-                <td style="font-size:10px">
-                    @Html.DisplayFor(modelItem => user.UserId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.UserEmail)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => user.UserName)
-                </td>
-                <td>
-                    <ul style="font-size:12px" class="list-group">
-                        @foreach (var role in user.Roles)
-                        {
-                        <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
-                            @string.Format("{0}", role.Name)
-                            <span class="badge badge-success badge-pill">
-                                True
-                            </span>
-                        </li>
-                        }
-                    </ul>
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = user.UserId }) |
-                    @Html.ActionLink("Details", "Details", new { id = user.UserId })
-                </td>
-            </tr>
-        }
-    </tbody>
-
-</table>
+    @*Manage Trainer Accounts*@
+    <h2 class="mt-5">Manage Trainer Accounts</h2>
+    <table class="table">
+        <tbody>
+            @foreach (var user in Model)
+            {
+                var check = user.Roles.Where(x => x.Name == "Trainer").ToList();
+                if (check.Count > 0)
+                {
+                    <tr class="col-12">
+                        <td class="col-2">
+                            @Html.DisplayFor(modelItem => user.UserEmail)
+                        </td>
+                        <td class="col-2">
+                            @Html.DisplayFor(modelItem => user.UserName)
+                        </td>
+                        <td class="col-2">
+                            **********
+                        </td>
+                        <td class="col-3">
+                            <ul style="font-size:12px" class="list-group">
+                                @foreach (var role in user.Roles)
+                                {
+                                    <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
+                                        @string.Format("{0}", role.Name)
+                                    </li>
+                                }
+                            </ul>
+                        </td>
+                        <td class="col-1">
+                            @Html.ActionLink("Edit", "Edit", new { id = user.UserId }) -
+                            @Html.ActionLink("Show", "Details", new { id = user.UserId })
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
