Create Table Cource, Cource Category

--- a/MatRoleClaim/Views/Shared/_Layout.cshtml
+++ b/MatRoleClaim/Views/Shared/_Layout.cshtml
@@ -23,6 +23,15 @@
                     <a class="nav-link" href="@Url.Action("ManageAccount", "UserRoles")">Manager Account</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "Roles")">Manager Account Level</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "CourceCategories")">Manager Cource Category</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("Index", "Cources")">Manager Cource</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Blog", "Home")">Blog</a>
                 </li>
                 <li class="nav-item">
