--- a/MatRoleClaim/Views/Roles/Delete.cshtml
+++ b/MatRoleClaim/Views/Roles/Delete.cshtml
@@ -1,33 +1,34 @@
 ﻿@model MatRoleClaim.Models.IdentityModels.ApplicationRole
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Account Level";
 }
+<div class="m-5">
 
-<h2>Delete</h2>
+    <h2>Delete Account Level</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Role</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-primary" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-primary" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+
 </div>
