--- a/MatRoleClaim/Views/Roles/Details.cshtml
+++ b/MatRoleClaim/Views/Roles/Details.cshtml
@@ -1,26 +1,23 @@
 ﻿@model MatRoleClaim.Models.IdentityModels.ApplicationRole
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details Account Level";
 }
+<div class="m-5">
 
-<h2>Details</h2>
+    <h2>Details Account Level</h2>
 
-<div>
-    <h4>Role</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>@Html.DisplayNameFor(model => model.Id)</dt>
-        <dd>@Html.DisplayFor(model => model.Id)</dd>
+    <div>
+        <dl class="dl-horizontal">
+            <dt>@Html.DisplayNameFor(model => model.Name)</dt>
+            <dd>@Html.DisplayFor(model => model.Name)</dd>
 
-        <dt>@Html.DisplayNameFor(model => model.Name)</dt>
-        <dd>@Html.DisplayFor(model => model.Name)</dd>
-
-        <dt>@Html.DisplayNameFor(model => model.Description)</dt>
-        <dd>@Html.DisplayFor(model => model.Description)</dd>
-    </dl>
+            <dt>@Html.DisplayNameFor(model => model.Description)</dt>
+            <dd>@Html.DisplayFor(model => model.Description)</dd>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
