--- a/MatRoleClaim/Views/UserRoles/Details.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MatRoleClaim.Models.ViewModels.UserRolesViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details Account";
 }
 <div class="m-5">
-    <h2>Details User </h2>
+    <h2>Details Account </h2>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.UserName)
