--- a/MatRoleClaim/Views/UserRoles/Edit.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Edit.cshtml
@@ -59,8 +59,8 @@
         </div>
     }
 
-    <div>
+   @* <div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
 
 </div>
