--- a/MatRoleClaim/Views/Cources/Index.cshtml
+++ b/MatRoleClaim/Views/Cources/Index.cshtml
@@ -10,40 +10,25 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CourceCategory.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SysllabusLink)
-            </th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CourceCategory.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SysllabusLink)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+    @foreach (var item in Model)
+    {
+        <div class="card col-2">
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Name)</h5>
+                <br />
+                <br />
+                <br />
+                <br />
+                <p class="text-center">
+                    @Html.ActionLink("View", "Details", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
-        }
+                </p>
+            </div>
+        </div>
+    }
 
-    </table>
+
 
 </div>
