--- a/MatRoleClaim/Views/Cources/Edit.cshtml
+++ b/MatRoleClaim/Views/Cources/Edit.cshtml
@@ -1,53 +1,101 @@
 ﻿@model MatRoleClaim.Models.Cource
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Cource";
 }
 
-<h2>Edit</h2>
+<div class="m-5">
+    <div class="row">
+        <div class="col-6">
+            <h2>Edit Cource</h2>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Cource</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-12">
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.SysllabusLink, htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.SysllabusLink, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.SysllabusLink, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-12">Cource Category</label>
+                        <div class="col-md-12">
+                            @Html.DropDownList("CourceCategoryId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.CourceCategoryId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-12">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </div>
+            }
         </div>
+        <div class="col-6">
+            <h2>Assigned Members</h2>
+            <form action="/Cources/AddAccountInCource" method="post">
+                @Html.HiddenFor(model => model.Id)
+                <div class="row">
+                    <div class="form-group col-6">
+                        <label class="control-label col-md-12">Add Trainer <hr /></label>
+                        <div class="col-md-12">
+                            @Html.DropDownList("TrainerId", null, htmlAttributes: new { @class = "form-control", multiple = "multiple", size = "3" })
+                        </div>
+                    </div>
+                    <div class="form-group col-6">
+                        <label class="control-label col-md-12">Add Trainee <hr /></label>
+                        <div class="col-md-12">
+                            @Html.DropDownList("TraineeId", null, htmlAttributes: new { @class = "form-control", multiple = "multiple", size = "3" })
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-12">
+                        <input type="submit" value="Add" class="btn btn-primary" />
+                    </div>
+                </div>
+            </form>
+            <h4>Trainer</h4>
+            <hr />
+            @if (ViewBag.Trainer != null)
+            {
+                foreach (var item in ViewBag.Trainer)
+                {
+                    <p>@item.Trainer.UserName <a href="@Url.Action("DeleteTrainer", "Cources", new { id = item.Trainer.Id, idCource =  Model.Id})">Delete</a></p>
+                }
+            }
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SysllabusLink, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SysllabusLink, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SysllabusLink, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CourceCategoryId, "CourceCategoryId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CourceCategoryId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CourceCategoryId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+            <h4>Trainee</h4>
+            <hr />
+            @if (ViewBag.Trainee != null)
+            {
+                foreach (var item in ViewBag.Trainee)
+                {
+                    <p>@item.UserTrainees.UserName <a href="@Url.Action("DeleteTrainee", "Cources", new { id = item.Trainer.Id, idCource =  Model.Id})">Delete</a></p>
+                }
+            }
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+
 </div>
