--- a/MatRoleClaim/Views/CourceCategories/Index.cshtml
+++ b/MatRoleClaim/Views/CourceCategories/Index.cshtml
@@ -10,27 +10,38 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+
+    @foreach (var item in Model)
+    {
+        <div class="card col-12 m-2">
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Name)</h5>
+                <p class="text-center">
+                    @Html.ActionLink("View", "Details", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
-        }
-
-    </table>
+                </p>
+                <div class="row">
+                    @foreach (var item1 in item.Cources)
+                    {
+                        <div class="card col-2 m-2">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">@item1.Name</h5>
+                                <br />
+                                <br />
+                                <br />
+                                <br />
+                                <p class="text-center">
+                                    <a href="@Url.Action("Details", "Cources", new { id = item1.Id })">View</a>
+                                    <a href="@Url.Action("Edit", "Cources", new { id = item1.Id })">Edit</a>
+                                    <a href="@Url.Action("Delete", "Cources", new { id = item1.Id })">Delete</a>
+                                </p>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    }
 </div>
