--- a/MatRoleClaim/Views/Cources/Delete.cshtml
+++ b/MatRoleClaim/Views/Cources/Delete.cshtml
@@ -3,46 +3,49 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="m-5">
 
-<h2>Delete</h2>
+    <h2>Delete Cource</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Cource</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CourceCategory.Name)
-        </dt>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Cource</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.CourceCategory.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourceCategory.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.CourceCategory.Name)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SysllabusLink)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.SysllabusLink)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SysllabusLink)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.SysllabusLink)
+            </dd>
 
-    </dl>
+        </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
 </div>
