--- a/MatRoleClaim/Views/Cources/Index.cshtml
+++ b/MatRoleClaim/Views/Cources/Index.cshtml
@@ -11,23 +11,25 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 
-    @foreach (var item in Model)
-    {
-        <div class="card col-2">
-            <div class="card-body">
-                <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Name)</h5>
-                <br />
-                <br />
-                <br />
-                <br />
-                <p class="text-center">
-                    @Html.ActionLink("View", "Details", new { id = item.Id })
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </p>
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="card col-2 m-2">
+                <div class="card-body">
+                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Name)</h5>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <p class="text-center">
+                        @Html.ActionLink("View", "Details", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </p>
+                </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 
 
 
