--- a/MatRoleClaim/Views/RoleClaims/Details.cshtml
+++ b/MatRoleClaim/Views/RoleClaims/Details.cshtml
@@ -3,40 +3,37 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="m-5">
 
-<h2>Details</h2>
+    <h2>Details Setting Account Level</h2>
 
-<div>
-    <h4>Role Claims Details</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>@Html.DisplayNameFor(model => model.RoleId)</dt>
-        <dd>@Html.DisplayFor(model => model.RoleId)</dd>
+    <div>
+        <dl class="dl-horizontal">
+            <dt>Account Level</dt>
+            <dd>@Html.DisplayFor(model => model.RoleName)</dd>
 
-        <dt>@Html.DisplayNameFor(model => model.RoleName)</dt>
-        <dd>@Html.DisplayFor(model => model.RoleName)</dd>
+            <dt>Description</dt>
+            <dd>@Html.DisplayFor(model => model.RoleDescription)</dd>
 
-        <dt>@Html.DisplayNameFor(model => model.RoleDescription)</dt>
-        <dd>@Html.DisplayFor(model => model.RoleDescription)</dd>
+            <dt>@Html.DisplayNameFor(model => model.Claims)</dt>
+            <dd class="col-3">
+                <ul class="list-group">
+                    @foreach (var claim in Model.Claims)
+                    {
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            @string.Format("{0}/{1}", claim.ClaimType, claim.ClaimValue)
+                            <span class="badge @(claim.Status ? "badge-success" : "badge-danger") badge-pill">
+                                @claim.Status
+                            </span>
+                        </li>
+                    }
+                </ul>
+            </dd>
 
-        <dt>@Html.DisplayNameFor(model => model.Claims)</dt>
-        <dd class="col-3">
-            <ul class="list-group">
-                @foreach (var claim in Model.Claims)
-                {
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        @string.Format("{0}/{1}", claim.ClaimType, claim.ClaimValue)
-                        <span class="badge @(claim.Status ? "badge-success" : "badge-danger") badge-pill">
-                            @claim.Status
-                        </span>
-                    </li>
-                }
-            </ul>
-        </dd>
-
-    </dl>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.RoleId }) |
+        @Html.ActionLink("Back to List", "Index")
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.RoleId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
