--- a/MatRoleClaim/Views/Shared/_Layout.cshtml
+++ b/MatRoleClaim/Views/Shared/_Layout.cshtml
@@ -32,18 +32,11 @@
                     <a class="nav-link" href="@Url.Action("Index", "Cources")">Manager Cource</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Blog", "Home")">Blog</a>
+                    <a class="nav-link" href="@Url.Action("Index", "RoleClaims")">Setting Accout Level</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Contact", "Home")">Contact</a>
-                </li>
-
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Admin")">Admin</a>
-                </li>
+                </li>*@
                 @Html.Partial("_LoginPartial")
             </ul>
             @*<form class="form-inline my-2 my-lg-0">
