--- a/MatRoleClaim/Views/UserRoles/Details.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Details.cshtml
@@ -23,6 +23,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Phone)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Phone)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DateOfBirth)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateOfBirth)
+        </dd>
+
+        <dt>
             Account level
         </dt>
 
