--- a/MatRoleClaim/Views/Courses/Index.cshtml
+++ b/MatRoleClaim/Views/Courses/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MatRoleClaim.Models.Cource>
+﻿@model IEnumerable<MatRoleClaim.Models.Course>
 
 @{
     ViewBag.Title = "Manage Cource";
