--- a/MatRoleClaim/Views/CourseCategories/Create.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model MatRoleClaim.Models.CourceCategory
+﻿@model MatRoleClaim.Models.CourseCategory
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create  Cource Category";
 }
 <div class="m-5">
 
-    <h2>Edit Cource Category</h2>
+    <h2>Create Cource Category</h2>
 
     @using (Html.BeginForm())
     {
@@ -13,8 +13,6 @@
 
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -25,7 +23,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-success" />
                 </div>
             </div>
         </div>
@@ -34,4 +32,5 @@
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
+
 </div>
