--- a/MatRoleClaim/Views/CourseCategories/Delete.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Delete.cshtml
@@ -1,39 +1,21 @@
-﻿@model MatRoleClaim.Models.Cource
+﻿@model MatRoleClaim.Models.CourseCategory
 
 @{
     ViewBag.Title = "Delete";
 }
-<div class="m-5">
 
-    <h2>Delete Cource</h2>
+<div class="m-5">
+    <h2>Delete Cource Category</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>Cource</h4>
-        <hr />
         <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.CourceCategory.Name)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.CourceCategory.Name)
-            </dd>
-
             <dt>
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Name)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.SysllabusLink)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.SysllabusLink)
             </dd>
 
         </dl>
