--- a/MatRoleClaim/Views/CourseCategories/Edit.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Edit.cshtml
@@ -1,11 +1,11 @@
-﻿@model MatRoleClaim.Models.CourceCategory
+﻿@model MatRoleClaim.Models.CourseCategory
 
 @{
-    ViewBag.Title = "Create  Cource Category";
+    ViewBag.Title = "Edit";
 }
 <div class="m-5">
 
-    <h2>Create Cource Category</h2>
+    <h2>Edit Cource Category</h2>
 
     @using (Html.BeginForm())
     {
@@ -13,6 +13,8 @@
 
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -23,7 +25,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-success" />
+                    <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </div>
         </div>
@@ -32,5 +34,4 @@
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
-
 </div>
