--- a/MatRoleClaim/Views/CourseCategories/Index.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MatRoleClaim.Models.CourceCategory>
+﻿@model IEnumerable<MatRoleClaim.Models.CourseCategory>
 
 @{
     ViewBag.Title = "Manage Cource Category";
