--- a/MatRoleClaim/Views/Courses/Delete.cshtml
+++ b/MatRoleClaim/Views/Courses/Delete.cshtml
@@ -1,21 +1,39 @@
-﻿@model MatRoleClaim.Models.CourceCategory
+﻿@model MatRoleClaim.Models.Course
 
 @{
     ViewBag.Title = "Delete";
 }
-
 <div class="m-5">
-    <h2>Delete Cource Category</h2>
+
+    <h2>Delete Cource</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
+        <h4>Cource</h4>
+        <hr />
         <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.CourceCategory.Name)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.CourceCategory.Name)
+            </dd>
+
             <dt>
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Name)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.SysllabusLink)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.SysllabusLink)
             </dd>
 
         </dl>
