--- a/MatRoleClaim/Views/Manage/Index.cshtml
+++ b/MatRoleClaim/Views/Manage/Index.cshtml
@@ -1,30 +1,241 @@
 ﻿@model MatRoleClaim.Models.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
+
+
 }
-
-<h2>@ViewBag.Title.</h2>
-
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>Password:</dt>
-        <dd>
-            [
-            @if (Model.HasPassword)
+<div class="m-5">
+    @if (ViewBag.TrainerCount != 0)
+    {
+        <div class="row">
+            @foreach (var item in ViewBag.Trainer)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                <div class="card col-3">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@item.Cource.Name</h5>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p class="text-center">
+                            @Html.ActionLink("View", "Details", new { id = item.CourceId })
+                        </p>
+                    </div>
+                </div>
             }
-            else
+            <div class="col-1"></div>
+            <div class="card col-8">
+                <div class="card-body">
+                    <form action="/" method="post">
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Name</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Traner ID</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Id</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Trainer name</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Sysllabus</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Room</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var item in ViewBag.Trainer)
             {
-                @Html.ActionLink("Create", "SetPassword")
+                <div class="card col-3 m-1">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@item.Cource.Name</h5>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p class="text-center">
+                            @Html.ActionLink("View", "Details", new { id = item.CourceId })
+                        </p>
+                    </div>
+                </div>
             }
-            ]
-        </dd>
-        
-    </dl>
+        </div>
+    }
+
+    @*TraineeCount*@
+    @if (ViewBag.TraineeCount != 0)
+    {
+        <div class="row">
+            @foreach (var item in ViewBag.Trainee)
+            {
+                <div class="card col-3">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@item.Cource.Name</h5>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p class="text-center">
+                            @Html.ActionLink("View", "Details", new { id = item.CourceId })
+                        </p>
+                    </div>
+                </div>
+            }
+            <div class="col-1"></div>
+            <div class="card col-8">
+                <div class="card-body">
+                    <form action="/" method="post">
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Name</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Traner ID</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Id</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Trainee name</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Sysllabus</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group col-6">
+                                <label class="control-label col-md-12">Room</label>
+                                <div class="col-md-12">
+                                    <input type="type" name="name" value="" class="form-control" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var item in ViewBag.Trainer)
+            {
+                <div class="card col-3 m-1">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">@item.Cource.Name</h5>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p class="text-center">
+                            @Html.ActionLink("View", "Details", new { id = item.CourceId })
+                        </p>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <p class="text-success">@ViewBag.StatusMessage</p>
+    <div>
+        <h4>Change your account settings</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>Password:</dt>
+            <dd>
+                [
+                @if (Model.HasPassword)
+                {
+                    @Html.ActionLink("Change your password", "ChangePassword")
+                }
+                else
+                {
+                    @Html.ActionLink("Create", "SetPassword")
+                }
+                ]
+            </dd>
+
+        </dl>
+    </div>
+
+
 </div>
-
-
