--- a/MatRoleClaim/Views/Shared/_LoginPartial.cshtml
+++ b/MatRoleClaim/Views/Shared/_LoginPartial.cshtml
@@ -15,9 +15,9 @@
 }
 else
 {
-    <li class="nav-item">
+    @*<li class="nav-item">
         @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })
-    </li>
+    </li>*@
     <li class="nav-item">
         @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })
     </li>
