--- a/MatRoleClaim/Views/Courses/Details.cshtml
+++ b/MatRoleClaim/Views/Courses/Details.cshtml
@@ -50,7 +50,7 @@
             {
                 foreach (var item in ViewBag.Trainee)
                 {
-                    <p>@item.UserTrainees.UserName</p>
+                    <p>@item.Trainee.UserName</p>
                 }
             }
         </dl>
