--- a/MatRoleClaim/Views/Courses/Edit.cshtml
+++ b/MatRoleClaim/Views/Courses/Edit.cshtml
@@ -7,7 +7,7 @@
 <div class="m-5">
     <div class="row">
         <div class="col-6">
-            <h2>Edit Cource</h2>
+            <h2>Edit Course</h2>
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -50,7 +50,7 @@
         </div>
         <div class="col-6">
             <h2>Assigned Members</h2>
-            <form action="/Cources/AddAccountInCource" method="post">
+            <form action="/Courses/AddAccountInCourse" method="post">
                 @Html.HiddenFor(model => model.Id)
                 <div class="row">
                     <div class="form-group col-6">
@@ -78,7 +78,7 @@
             {
                 foreach (var item in ViewBag.Trainer)
                 {
-                    <p>@item.Trainer.UserName <a href="@Url.Action("DeleteTrainer", "Cources", new { id = item.Trainer.Id, idCource =  Model.Id})">Delete</a></p>
+                    <p>@item.Trainer.UserName <a href="@Url.Action("DeleteTrainer", "Courses", new { id = item.Trainer.Id, idCource =  Model.Id})">Delete</a></p>
                 }
             }
 
@@ -86,10 +86,10 @@
             <hr />
             @if (ViewBag.Trainee != null)
             {
-                @*foreach (var item in ViewBag.Trainee)
+                foreach (var item in ViewBag.Trainee)
                 {
-                    <p>@item.UserTrainees.UserName <a href="@Url.Action("DeleteTrainee", "Cources", new { id = item.Trainer.Id, idCource =  Model.Id})">Delete</a></p>
-                }*@
+                    <p>@item.Trainee.UserName <a href="@Url.Action("DeleteTrainee", "Courses", new { id = item.Trainee.Id, idCource =  Model.Id})">Delete</a></p>
+                }
             }
         </div>
     </div>
