Update tbl user

--- a/MatRoleClaim/Views/CourseCategories/Create.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MatRoleClaim.Models.CourseCategory
 
 @{
-    ViewBag.Title = "Create  Cource Category";
+    ViewBag.Title = "Create  Course Category";
 }
 <div class="m-5">
 
-    <h2>Create Cource Category</h2>
+    <h2>Create Course Category</h2>
 
     @using (Html.BeginForm())
     {
