--- a/MatRoleClaim/Views/CourseCategories/Details.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Details.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="m-5">
 
-    <h2>Details Cource Category </h2>
+    <h2>Details Course Category </h2>
 
     <div>
         <dl class="dl-horizontal">
