--- a/MatRoleClaim/Views/CourseCategories/Edit.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="m-5">
 
-    <h2>Edit Cource Category</h2>
+    <h2>Edit Course Category</h2>
 
     @using (Html.BeginForm())
     {
