--- a/MatRoleClaim/Views/CourseCategories/Index.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<MatRoleClaim.Models.CourseCategory>
 
 @{
-    ViewBag.Title = "Manage Cource Category";
+    ViewBag.Title = "Manage Course Category";
 }
 
 <div class="m-5">
-    <h2>Manage Cource Category</h2>
+    <h2>Manage Course Category</h2>
 
     <p>
         @Html.ActionLink("Create New", "Create")
