--- a/MatRoleClaim/Views/Courses/Details.cshtml
+++ b/MatRoleClaim/Views/Courses/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MatRoleClaim.Models.Course
 
 @{
-    ViewBag.Title = "View Cource";
+    ViewBag.Title = "View Course";
 }
 <div class="m-5">
 
-    <h2>View Cource</h2>
+    <h2>View Course</h2>
 
     <div>
         <dl class="dl-horizontal">
