--- a/MatRoleClaim/Views/Courses/Index.cshtml
+++ b/MatRoleClaim/Views/Courses/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<MatRoleClaim.Models.Course>
 
 @{
-    ViewBag.Title = "Manage Cource";
+    ViewBag.Title = "Manage Course";
 }
 <div class="m-5">
 
-    <h2>Manage Cource</h2>
+    <h2>Manage Course</h2>
 
     <p>
         @Html.ActionLink("Create New", "Create")
