--- a/MatRoleClaim/Views/Shared/_Layout.cshtml
+++ b/MatRoleClaim/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                     <a class="nav-link" href="@Url.Action("Index", "Roles")">Manager Account Level</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "CourseCategories")">Manager Cource Category</a>
+                    <a class="nav-link" href="@Url.Action("Index", "CourseCategories")">Manager Cousce Category</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Courses")">Manager Cource</a>
+                    <a class="nav-link" href="@Url.Action("Index", "Courses")">Manager Cousce</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "RoleClaims")">Setting Accout Level</a>
