--- a/MatRoleClaim/Views/CourseCategories/Delete.cshtml
+++ b/MatRoleClaim/Views/CourseCategories/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="m-5">
-    <h2>Delete Cource Category</h2>
+    <h2>Delete Course Category</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
