--- a/MatRoleClaim/Views/Courses/Delete.cshtml
+++ b/MatRoleClaim/Views/Courses/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="m-5">
 
-    <h2>Delete Cource</h2>
+    <h2>Delete Cousce</h2>
 
     <h3>Are you sure you want to delete this?</h3>
     <div>
