--- a/MatRoleClaim/Views/Courses/Edit.cshtml
+++ b/MatRoleClaim/Views/Courses/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MatRoleClaim.Models.Course
 
 @{
-    ViewBag.Title = "Edit Cource";
+    ViewBag.Title = "Edit Course";
 }
 
 <div class="m-5">
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label col-md-12">Cource Category</label>
+                        <label class="control-label col-md-12">Course Category</label>
                         <div class="col-md-12">
                             @Html.DropDownList("CourceCategoryId", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.CourceCategoryId, "", new { @class = "text-danger" })
