--- a/MatRoleClaim/Views/UserRoles/Details.cshtml
+++ b/MatRoleClaim/Views/UserRoles/Details.cshtml
@@ -7,6 +7,21 @@
     <h2>Details Account </h2>
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
 
