--- a/MatRoleClaim/Views/Users/Details.cshtml
+++ b/MatRoleClaim/Views/Users/Details.cshtml
@@ -10,6 +10,21 @@
     <div>
         <dl class="dl-horizontal">
             <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Address)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Address)
+            </dd>
+
+            <dt>
                 @Html.DisplayNameFor(model => model.Email)
             </dt>
 
