--- a/MatRoleClaim/Views/RoleClaims/Index.cshtml
+++ b/MatRoleClaim/Views/RoleClaims/Index.cshtml
@@ -24,32 +24,35 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RoleName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RoleDescription)
-                    </td>
-                    <td>
-                        <ul style="font-size:12px" class="list-group">
+                if (item.RoleName != "spadmin")
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RoleName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RoleDescription)
+                        </td>
+                        <td>
+                            <ul style="font-size:12px" class="list-group">
 
-                            @foreach (var claim in item.Claims)
-                            {
-                                <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
-                                    @string.Format("{0}/{1}", claim.ClaimType, claim.ClaimValue)
-                                    <span class="badge @(claim.Status ? "badge-success" : "badge-danger") badge-pill">
-                                        @claim.Status
-                                    </span>
-                                </li>
-                            }
-                        </ul>
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.RoleId }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.RoleId })
-                    </td>
-                </tr>
+                                @foreach (var claim in item.Claims)
+                                {
+                                    <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
+                                        @string.Format("{0}/{1}", claim.ClaimType, claim.ClaimValue)
+                                        <span class="badge @(claim.Status ? "badge-success" : "badge-danger") badge-pill">
+                                            @claim.Status
+                                        </span>
+                                    </li>
+                                }
+                            </ul>
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.RoleId }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.RoleId })
+                        </td>
+                    </tr>
+                }
             }
         </tbody>
     </table>
