--- a/MatRoleClaim/Views/UserRoles/ManageAccount.cshtml
+++ b/MatRoleClaim/Views/UserRoles/ManageAccount.cshtml
@@ -2,10 +2,29 @@
 
 @{
     ViewBag.Title = "Manage Account";
+    List<string> currentUserRoles = ViewBag.CurrentUserRoles;
 }
 <div class="m-5">
-    <h2>Manage Accounts</h2>
-    <p><a href="@Url.Action("Create", "Users")">Create New Trainer & Trainee</a></p>
+    <div class="row">
+        <div class="col-6">
+            <h2>Manage Accounts</h2>
+            <p><a href="@Url.Action("Create", "Users")">Create New Trainer & Trainee</a></p>
+        </div>
+        <div class="col-6">
+            <form action="/UserRoles/ManageAccount" method="get">
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text" name="name" value="" class="form-control" />
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-secondary">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    
+    
     @*<a href="@Url.Action("Register", "Account")">Create New Trainer & Trainee</a>*@
     <table class="table">
         <tr>
@@ -26,33 +45,73 @@
         <tbody>
             @foreach (var user in Model)
             {
-                <tr class="col-12">
-                    <td class="col-2">
-                        @Html.DisplayFor(modelItem => user.UserEmail)
-                    </td>
-                    <td class="col-2">
-                        @Html.DisplayFor(modelItem => user.UserName)
-                    </td>
-                    <td class="col-1">
-                        **********
-                    </td>
-                    <td class="col-3">
-                        <ul style="font-size:12px" class="list-group">
-                            @foreach (var role in user.Roles)
-                            {
-                                <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
-                                    @string.Format("{0}", role.Name)
-                                </li>
-                            }
-                        </ul>
-                    </td>
-                    <td class="col-3">
-                        <a href="@Url.Action("Edit", "UserRoles", new { id = user.UserId })">Change Account Level</a> |
-                        <a href="@Url.Action("Edit", "Users", new { id = user.UserId })">Edit</a> |
-                        <a href="@Url.Action("Details", "Users", new { id = user.UserId })">Show</a> |
-                        <a href="@Url.Action("Delete", "Users", new { id = user.UserId })">Delete</a>
-                    </td>
-                </tr>
+                if (currentUserRoles.Where(x => x.Contains("spadmin") || x.Contains("Administrator")).Count() > 0)
+                {
+                    if (user.Roles.Where(x => x.Name == "Administrator" || x.Name == "Training Staff").Count() > 0)
+                    {
+                        <tr class="col-12">
+                            <td class="col-2">
+                                @Html.DisplayFor(modelItem => user.UserEmail)
+                            </td>
+                            <td class="col-2">
+                                @Html.DisplayFor(modelItem => user.UserName)
+                            </td>
+                            <td class="col-1">
+                                **********
+                            </td>
+                            <td class="col-3">
+                                <ul style="font-size:12px" class="list-group">
+                                    @foreach (var role in user.Roles)
+                                    {
+                                        <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
+                                            @string.Format("{0}", role.Name)
+                                        </li>
+                                    }
+                                </ul>
+                            </td>
+                            <td class="col-3">
+                                <a href="@Url.Action("Edit", "UserRoles", new { id = user.UserId })">Change Account Level</a> |
+                                <a href="@Url.Action("Edit", "Users", new { id = user.UserId })">Edit</a> |
+                                <a href="@Url.Action("Details", "Users", new { id = user.UserId })">Show</a> |
+                                <a href="@Url.Action("Delete", "Users", new { id = user.UserId })">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                }
+                else if (currentUserRoles.Where(x => x.Contains("spadmin") || x.Contains("Training Staff")).Count() > 0)
+                {
+                    if (user.Roles.Where(x => x.Name == "Trainer" || x.Name == "Trainee").Count() > 0)
+                    {
+                        <tr class="col-12">
+                            <td class="col-2">
+                                @Html.DisplayFor(modelItem => user.UserEmail)
+                            </td>
+                            <td class="col-2">
+                                @Html.DisplayFor(modelItem => user.UserName)
+                            </td>
+                            <td class="col-1">
+                                **********
+                            </td>
+                            <td class="col-3">
+                                <ul style="font-size:12px" class="list-group">
+                                    @foreach (var role in user.Roles)
+                                    {
+                                        <li class="list-group-item py-1 d-flex justify-content-between align-items-center">
+                                            @string.Format("{0}", role.Name)
+                                        </li>
+                                    }
+                                </ul>
+                            </td>
+                            <td class="col-3">
+                                <a href="@Url.Action("Edit", "UserRoles", new { id = user.UserId })">Change Account Level</a> |
+                                <a href="@Url.Action("Edit", "Users", new { id = user.UserId })">Edit</a> |
+                                <a href="@Url.Action("Details", "Users", new { id = user.UserId })">Show</a> |
+                                <a href="@Url.Action("Delete", "Users", new { id = user.UserId })">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                }
+
             }
         </tbody>
     </table>
